correctly use bindings and toolbars
Introduce a toolbar in GalleryImageActivity.kt and fixed the wrong usage of bindings in both activities.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GallerIQUII">
-        <activity android:name=".activity.GalleryImageActivity"></activity>
+        <activity android:name=".activity.GalleryImageActivity" android:theme="@style/Theme.GallerIQUII.NoActionBar"/>
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
